# onnxruntime-model-inference-deployment-instance

./: CMakeLists.txt  README.md  yolo_detector.cpp  yolo_detector.py
train_result/: args.yaml  fruit.yaml  results.csv  yolo11.yaml
